# rustfarmer

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  timer.rs
